tests/snapshots/integration_tests__examples_match_snapshots@executables.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/executables
---
cat.txt.sh: ""
count-cli-args.txt.sh: "0\n"
error.txt.sh: "Unable to emit rendered content.\n\nCaused by:\n    Process exited with code 1: boom!\n    \n"
ls.txt.sh: "SKIP-SNAPSHOT-random.bin.sh\nSKIP-SNAPSHOT-system-info.html.sh\ncat.txt.sh\ncount-cli-args.txt.sh\nerror.txt.sh\nls.txt.sh\noutput-and-error.txt.sh\npwd.txt.sh\nslow-error.txt.sh\nslow-template.txt.hbs\nslow.txt.sh\nsubdirectory\ntemplate.txt.hbs\n"
output-and-error.txt.sh: "Unable to emit rendered content.\n\nCaused by:\n    Process exited with code 1\n"
pwd.txt.sh: "$PROJECT_DIRECTORY/src/examples/executables\n"
slow-error.txt.sh: "Unable to emit rendered content.\n\nCaused by:\n    Process exited with code 1: Boom!\n    \n"
slow-template.txt.hbs: "﻿🔴 Ready…\n🟡 Set…\n🟢 Go!\n🏁 Finished!\n"
slow.txt.sh: "﻿🔴 Ready…\n🟡 Set…\n🟢 Go!\n"
subdirectory/pwd.txt.sh: "$PROJECT_DIRECTORY/src/examples/executables/subdirectory\n"
template.txt.hbs: "this is pwd from subdirectory:\n$PROJECT_DIRECTORY/src/examples/executables/subdirectory\n"
