tests/snapshots/integration_tests__partials.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/partials

---
a.html.hbs: "a\n"
ab.html.hbs: "a\nb\n\n"
abc.html.hbs: "a\nb\n\nc\n\nsubdirectory entries:\n/subdirectory/c\n"
b.html: "b\n"
blocks.html.hbs: "this is the block, hopefully: \"this is block content\""
subdirectory.html.hbs: "subdirectory entries:\n/subdirectory/c\n"
subdirectory/c.html.hbs: "c\n"
uses-block.html.hbs: "this is the block, hopefully: \"\""

