tests/snapshots/integration_tests__realistic-basic.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/realistic-basic
---
favicon.ico: binary data with hash bb6e8c501c695e1f
negotiation/image.png: binary data with hash 8755fcb0461d5e1d
negotiation/image.webp: binary data with hash ebeeb8766ca92ddf
page.html: "<!doctype html>\n<html lang=\"en\">\n  <head>\n    <meta charset=\"utf-8\" />\n    <title>Basic Demo</title>\n    <link rel=\"stylesheet\" href=\"styles.css\" />\n  </head>\n  <body>\n    <h1>A basic demo</h1>\n\n    <p>\n      This is a simple website powered by <a href=\"https://github.com/mkantor/operator\">Operator</a>.\n      It's just a few static files. <a href=\"https://github.com/mkantor/operator/tree/master/samples/realistic-basic\">The\n      source is on GitHub</a>.\n    </p>\n\n    <p>\n      <a href=\"https://github.com/mkantor/operator/blob/master/samples/realistic-basic/page.html\">This\n      particular file</a> is just boring old HTML. It's served as-is, hopefully\n      the way you'd expect.\n    </p>\n\n    <p>\n      Operator can tell that this is meant to be HTML (and sets <a href=\"https://tools.ietf.org/html/rfc7231#section-3.1.1.5\">the\n      <code>Content-Type</code> header</a> to <code>text/html</code>) because\n      the file has <code>.html</code> as its extension. If you want examples of\n      other media types, here's <a href=\"stuff/words.txt\">some plain text</a>\n      and <a href=\"stuff/pixels.jpg\">an image</a>.\n    </p>\n\n    <p>\n      If you're looking for something a little more interesting, check out <a\n      href=\"https://github.com/mkantor/operator/tree/master/samples/realistic-advanced\">this\n      fancier demo</a>.\n    </p>\n\n    <details>\n      <summary>Footnote</summary>\n      You can make requests <a href=\"page.html\">with</a> and <a href=\"page\">without</a>\n      an extension on your URI path. Operator performs <a href=\"https://tools.ietf.org/html/rfc7231#section-3.4\">content\n      negotiation</a> using this extension as well as <a href=\"https://tools.ietf.org/html/rfc7231#section-5.3.2\">the\n      <code>Accept</code> header</a>. If multiple content files coexist whose\n      paths only differ by extension, they act as alternative representations\n      for the same resource. \"Negotiation\" means that Operator automatically\n      picks whichever one best fits the requester's preferences. For example,\n      depending on whether your browser prefers <code>image/png</code> or\n      <code>image/webp</code>, you'll see a different image here:\n      <img class=\"inline\" src=\"negotiation/image\" alt=\"Example\" />.\n    </details>\n  </body>\n</html>\n"
stuff/pixels.jpg: binary data with hash 1f966d3f8f3ff002
stuff/words.txt: "This is some text.\n"
styles.css: "body {\n  font-family: sans-serif;\n  font-size: 1.5em;\n  max-width: 50em;\n  margin: 0 auto;\n  padding: 1em 2em;\n  line-height: 1.25;\n}\n\nimg.inline {\n  height: 1em;\n  vertical-align: middle;\n}\n"
