tests/snapshots/integration_tests__samples_match_snapshots@alternative-representations.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/alternative-representations
---
foo.html: "<!DOCTYPE html>\n<title>foo</title>\n"
foo.json.sh: "{\"value\":\"foo\"}\n"
foo.md.hbs: _foo_
foo.toml.sh: "value = \"foo\"\n"
foo.txt.hbs: foo
foo.xml: "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<value>foo</value>"
hampster.gif: binary data with hash f12321a776395884
hampster.jpg: binary data with hash 8937766eff0b533b
hampster.pdf: binary data with hash 2ecb0a0fe0f87553
hampster.png: binary data with hash 655a38e4eafa8ca3
