tests/snapshots/integration_tests__samples_match_snapshots@invalid-template-that-is-executable.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/invalid-template-that-is-executable
---
this-file-is-executable.html.hbs: "Unable to load content.\n\nCaused by:\n    Content file name is not supported: The content file 'this-file-is-executable.html.hbs' appears to be a handlebars file (because it ends in '.hbs'), but it is also executable. It must be one or the other.\n"
