tests/snapshots/integration_tests__samples_match_snapshots@invalid-three-extensions-executable.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/invalid-three-extensions-executable
---
this-file-is-executable.txt.html.jpg: "Unable to load content.\n\nCaused by:\n    Content file name is not supported: Content file name 'this-file-is-executable.txt.html.jpg' has too many extensions.\n"
